fix: responsive design on tablet fixed

--- a/src/modules/PresentationHome/styles.module.css
+++ b/src/modules/PresentationHome/styles.module.css
@@ -56,7 +56,7 @@
     padding-top: 35px;
 }
 
-.text2_container {
+.text2_description {
     text-align: center;
     font-size: 17px;
     font-weight: 400;
@@ -73,8 +73,41 @@
     cursor: pointer;
 }
 
-/* ----------------- Tablet or Desktop Started ----------------- */
+
+/* ----------------- Tablet Started ----------------- */
 @media (min-width: 495px) {
+    .main_container {
+        width: 100%;
+        height: min(100% - 200px);
+    }
+    .text1_container {
+        max-width: 580px;
+        padding-top: 20px;
+    }
+    
+    .text1_description {
+        text-align: center;
+        font-size: 40px;
+        font-weight: 500;
+        line-height: 1.3;
+    }
+    
+    .text2_container {
+        max-width: 580px;
+        padding-top: 35px;
+    }
+    
+    .text2_description {
+        text-align: center;
+        font-size: 18px;
+        font-weight: 400;
+        line-height: 1.4;
+    }
+}
+
+
+/* ----------------- Desktop Started ----------------- */
+@media (min-width: 725px) { 
     .main_container {
         height: min(100% - 142.5px);
         width: 100%;
@@ -119,7 +152,7 @@
         padding-top: 35px;
     }
 
-    .text2_container {
+    .text2_description {
         text-align: center;
         font-size: 20px;
         font-weight: 400;
